static pages added - failure handled

--- a/uk.html
+++ b/uk.html
@@ -1,88 +1,30 @@
 <!DOCTYPE HTML>
 <script>
-	// function ipLookUp () {
-	// 	$.ajax('http://ip-api.com/json')
-	// 	.then(
-	// 		function success(response) {
-	// 			console.log('User\'s Location Data is ', response);
-	// 			console.log('User\'s Country', response.country);
-	// 			// document.getElementById("para1").innerHTML = "Cellular Data Statistics: " + response.country;
-	// 			document.getElementById("heading1").innerHTML = "Overall network performance of all operators in " + response.country;
-	// 			document.getElementById("heading2").innerHTML = "Network performance of top 10 cities in " + response.country + " (5G mmWave)";
-	// 			document.getElementById("heading3").innerHTML = "5G mmWave performance in diverse user mobility scenarios in " + response.country;
-	// 			document.getElementById("heading4").innerHTML = "Network performance of top 10 cities in " + response.country + " (5G sub-6 GHz)" ;
-	// 			document.getElementById("heading5").innerHTML = "Network perfromance trend in the " + response.country;
-
-				
-	// 		},
-
-	// 		function fail(data, status) {
-	// 			console.log('Request failed.  Returned status of',
-	// 						status);
-	// 		}
-	// 	);
-	// }
 	var country="check";
 	function findMyState () {
-		// const status = document.querySelector('.status');
-		function success (position) {
-			// console.log(position)
-			const latitude = position.coords.latitude;
-			const longitude = position.coords.longitude;
-			const geoApiUrl = 'https://api.bigdatacloud.net/data/reverse-geocode-client?latitude=${latitude}&longitude=${longitude}&localityLanguage=en'
-
-			fetch(geoApiUrl)
-			.then(res => res.json())
-			.then(data => {
-				// console.log(data)
-				
-				console.log(data.countryName)
-				country=data.countryName;
-				var allElements = document.getElementsByClassName("img_class");
-				var allIds = [];
-				for (var i = 0, n = allElements.length; i < n; ++i) {
-					var el = allElements[i];
-					// console.log(el.src)
-					el.src = el.src.replace("country_placeholder", country);
-					// if (el.id) { allIds.push(el.id); }
-				}
-				console.log("Country Changed!");
-				document.getElementById("main").style.display = "block";
-				document.getElementById("loaderIcon").style.display = "none";
-				document.getElementById("loaderHeader").style.display = "none";
-				document.getElementById("heading0").innerHTML = document.getElementById("heading0").innerHTML + data.countryName + " across all the available operators.";
-				document.getElementById("heading_overall").innerHTML = "Overall network performance of all operators in " + data.countryName;
-				document.getElementById("heading_mmWave_top10").innerHTML = "Network performance of top 10 cities in " + data.countryName + " (5G mmWave)";
-				document.getElementById("heading_mmWave_mobility").innerHTML = "5G mmWave performance in diverse user mobility scenarios in " + data.countryName;
-				document.getElementById("heading_sub6_top10").innerHTML = "Network performance of top 10 cities in " + data.countryName + " (5G sub-6 GHz)" ;
-				document.getElementById("heading_sub6_mobility").innerHTML = "5G sub-6 Ghz performance in diverse user mobility scenarios in " + data.countryName;
-				document.getElementById("heading_lte_top10").innerHTML = "Network performance of top 10 cities in " + data.countryName + " (LTE)" ;
-				document.getElementById("heading_lte_mobility").innerHTML = "LTE performance in diverse user mobility scenarios in " + data.countryName;
-				document.getElementById("heading5").innerHTML = "Network perfromance trend in " + data.countryName;
-				document.getElementById("defaultOpen").click();
-
-			})
-		}
-
-		function error () {
-			status.textContent = 'Unable to retrieve your location';
-			// alert('Unable to retrieve your location');
+			country="United Kingdom";
+			var allElements = document.getElementsByClassName("img_class");
+			var allIds = [];
+			for (var i = 0, n = allElements.length; i < n; ++i) {
+				var el = allElements[i];
+				// console.log(el.src)
+				el.src = el.src.replace("country_placeholder", country);
+				// if (el.id) { allIds.push(el.id); }
+			}
+			console.log("Country is United Kingdom!");
+			document.getElementById("main").style.display = "block";
 			document.getElementById("loaderIcon").style.display = "none";
 			document.getElementById("loaderHeader").style.display = "none";
-			document.getElementById("failure").style.display = "block";
-		}
-
-		if (!navigator.geolocation) {
-			status.textContent = 'Geolocation is not supported by your browser';
-			// alert('Geolocation is not supported by your browser');
-			document.getElementById("loaderIcon").style.display = "none";
-			document.getElementById("loaderHeader").style.display = "none";
-			document.getElementById("failure").style.display = "block";
-		}
-		else {
-			status.textContent = 'Locating…';
-    		navigator.geolocation.getCurrentPosition(success, error);
-		}
+			document.getElementById("heading0").innerHTML = document.getElementById("heading0").innerHTML + country + " across all the available operators.";
+			document.getElementById("heading_overall").innerHTML = "Overall network performance of all operators in " + country;
+			document.getElementById("heading_mmWave_top10").innerHTML = "Network performance of top 10 cities in " + country + " (5G mmWave)";
+			document.getElementById("heading_mmWave_mobility").innerHTML = "5G mmWave performance in diverse user mobility scenarios in " + country;
+			document.getElementById("heading_sub6_top10").innerHTML = "Network performance of top 10 cities in " + country + " (5G sub-6 GHz)" ;
+			document.getElementById("heading_sub6_mobility").innerHTML = "5G sub-6 Ghz performance in diverse user mobility scenarios in " + country;
+			document.getElementById("heading_lte_top10").innerHTML = "Network performance of top 10 cities in " + country + " (LTE)" ;
+			document.getElementById("heading_lte_mobility").innerHTML = "LTE performance in diverse user mobility scenarios in " + country;
+			document.getElementById("heading5").innerHTML = "Network perfromance trend in " + country;
+			document.getElementById("defaultOpen").click();
 	}
 
 	function openPerformancePlot(evt, cityName) {
@@ -175,43 +117,6 @@
 		from {opacity: 0;}
 		to {opacity: 1;}
 		}
-		/* hover start */
-		.dropbtn {
-			background-color: #ffffff;
-			color: rgb(11, 26, 226);
-			/* padding: 10px; */
-			font-size: 20px;
-			border: none;
-		}
-
-		.dropdown {
-		position: relative;
-		display: inline-block;
-		}
-
-		.dropdown-content {
-		display: none;
-		position: absolute;
-		background-color: #f1f1f1;
-		min-width: 160px;
-		/* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
-		z-index: 1;
-		}
-
-		.dropdown-content a {
-		color: black;
-		/* padding: 12px 16px; */
-		text-decoration: none;
-		font-size: 17px;
-		display: block;
-		}
-
-		.dropdown-content a:hover {background-color: #ddd;}
-
-		.dropdown:hover .dropdown-content {display: block;}
-
-		.dropdown:hover .dropbtn {background-color: #dddbdb;}
-		/* hover end */
 
 </style>
 <html>
@@ -231,7 +136,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
+							<li><a href="index.html">Contact Us</a></li>
 							<li>
 								<a href="#" class="icon solid fa-angle-down">Specific Country Stats</a>
 								<ul>
@@ -246,32 +151,7 @@
 			<!-- Banner -->
 				<section id="banner">
 				</section>
-			<!-- Failure -->
-			<section id="failure" class="container" style="display: none">
 
-				<section class="box special">
-					<header class="major">
-						<h2>Evolution of 5G networks
-						<br />
-						</h2>
-						<h4 id="heading0-1">This is a crowd sourced project jointly initiated by the <a href="https://ece.northeastern.edu/fac-ece/dkoutsonikolas/nuwins/">Northeastern University WiNS lab</a> and the <a href="https://engineering.purdue.edu/~ychu/">Purdue University</a>.
-							<br />
-							We collect uplink cellular network measurements from users across the globe using our <a href="#">application</a>.
-							<br />
-							Sorry! Could not find your location/no data found for your area. But you can see statistics of selected countries
-							<div class="dropdown">
-								<button class="dropbtn">here</button>
-								<div class="dropdown-content">
-									<a href="usa.html">United States</a>
-									<a href="uk.html">United Kingdom</a>
-								</div>
-							  </div>
-						</h4>
-						<!-- <p id="para1"></p> -->
-					</header>
-				</section>
-			</section>
-			<!-- Failure end -->
 			<!-- Main -->
 				<section id="main" class="container" style="display: none">
 
