--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
 						<h2>Evolution of 5G networks
 						<br />
 						</h2>
-						<h4 id="heading0-1">This is a crowd sourced project jointly initiated by the <a href="https://ece.northeastern.edu/fac-ece/dkoutsonikolas/nuwins/">Northeastern University WiNS lab</a> and the <a href="https://engineering.purdue.edu/~ychu/">Purdue University</a>.
+						<h4 id="heading0-1">This is a crowd sourced project jointly initiated by <a href="https://ece.northeastern.edu/fac-ece/dkoutsonikolas/nuwins/">Northeastern University WiNS Lab</a> and <a href="https://engineering.purdue.edu/~ychu/">Purdue University</a>.
 							<br />
 							We collect uplink cellular network measurements from users across the globe using our <a href="#">application</a>.
 							<br />
-							Sorry! Could not find your location/no data found for your area. But you can see statistics of selected countries
+							Sorry! Could not find your location/no data found for your area. But you can see world-wide cellular network statistics (below) and statistics of selected countries
 							<div class="dropdown">
 								<button class="dropbtn">here</button>
 								<div class="dropdown-content">
@@ -270,6 +270,12 @@
 						<!-- <p id="para1"></p> -->
 					</header>
 				</section>
+				<section class="box special features">
+					<h3 id="heading_worldwide_failure">Cellular network usage statistics around the globe</h3>
+					<div class="features-row">
+						<embed class = "img_class" src="images/performance_plots/worldwide/worlwide_stats.jpg" width="100%" height="100%" />
+					</div>
+				</section>
 			</section>
 			<!-- Failure end -->
 			<!-- Main -->
@@ -280,7 +286,7 @@
 							<h2>Evolution of 5G networks
 							<br />
 							</h2>
-							<h4 id="heading0">This is a crowd sourced project jointly initiated by the <a href="https://ece.northeastern.edu/fac-ece/dkoutsonikolas/nuwins/">Northeastern University WiNS lab</a> and the <a href="https://engineering.purdue.edu/~ychu/">Purdue University</a>.
+							<h4 id="heading0">This is a crowd sourced project jointly initiated by <a href="https://ece.northeastern.edu/fac-ece/dkoutsonikolas/nuwins/">Northeastern University WiNS lab</a> and <a href="https://engineering.purdue.edu/~ychu/">Purdue University</a>.
 								<br />
 								We collect uplink cellular network measurements from users across the globe using our <a href="#">application</a>.
 								<br />
@@ -289,7 +295,12 @@
 							<!-- <p id="para1"></p> -->
 						</header>
 					</section>
-
+					<section class="box special features">
+						<h3 id="heading_worldwide">Cellular network usage statistics around the globe</h3>
+						<div class="features-row">
+							<embed class = "img_class" src="images/performance_plots/country_placeholder/worlwide_stats.jpg" width="100%" height="100%" />
+						</div>
+					</section>
 					<section class="box special features">
 						<h3 id="heading_overall"></h3>
 						<div class="features-row">
