--- a/usa.html
+++ b/usa.html
@@ -169,7 +169,12 @@
 							<!-- <p id="para1"></p> -->
 						</header>
 					</section>
-
+					<section class="box special features">
+						<h3 id="heading_worldwide">Cellular network usage statistics around the globe</h3>
+						<div class="features-row">
+							<embed class = "img_class" src="images/performance_plots/country_placeholder/worlwide_stats.jpg" width="100%" height="100%" />
+						</div>
+					</section>
 					<section class="box special features">
 						<h3 id="heading_overall"></h3>
 						<div class="features-row">
