contact us page

--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,24 @@
 <!DOCTYPE HTML>
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<style>
+	/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column_images {
+  float: left;
+  width: 50%;
+  /* padding: 5px; */
+}
+
+/* Clear floats after image containers */
+.row_images::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
 <html>
+
 	<head>
-		<title>Contact - Alpha by HTML5 UP</title>
+		<title>Evolution of 5G</title>
+		<link rel="icon" type="image/png" href="images/nu.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +27,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
+				<!-- <header id="header">
 					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
 					<nav id="nav">
 						<ul>
@@ -40,53 +52,40 @@
 							<li><a href="#" class="button">Sign Up</a></li>
 						</ul>
 					</nav>
-				</header>
+				</header> -->
 
 			<!-- Main -->
 				<section id="main" class="container medium">
 					<header>
 						<h2>Contact Us</h2>
-						<p>Tell us what you think about our little operation.</p>
 					</header>
 					<div class="box">
-						<form method="post" action="#">
-							<div class="row gtr-50 gtr-uniform">
-								<div class="col-6 col-12-mobilep">
-									<input type="text" name="name" id="name" value="" placeholder="Name" />
-								</div>
-								<div class="col-6 col-12-mobilep">
-									<input type="email" name="email" id="email" value="" placeholder="Email" />
-								</div>
-								<div class="col-12">
-									<input type="text" name="subject" id="subject" value="" placeholder="Subject" />
-								</div>
-								<div class="col-12">
-									<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
-								</div>
-								<div class="col-12">
-									<ul class="actions special">
-										<li><input type="submit" value="Send Message" /></li>
-									</ul>
-								</div>
+						<div class="row_images">
+							<div class="column_images">
+							  <img src="images/nu.png" alt="NU" style="width:80%">
 							</div>
-						</form>
+							<div class="column_images">
+							  <img src="images/purdue_logo.png" alt="Purdue" style="width:80%">
+							</div>
+						</div>
+						<h3><u>Purdue University</u></h3>
+						<p><strong>Y. Charlie Hu: ychu@purdue.edu</strong></p>
+							<!-- <br /> -->
+						<h3><u>Northeastern University</u></h3>
+						<p><strong>Dimitrios Koutsonikolas: d.koutsonikolas@northeastern.edu</strong>
+						<br />
+						<strong>Imran Khan: khan.i@northeastern.edu</strong>
+						<br />
+						<strong>Moinak Ghoshal: ghoshal.m@northeastern.edu</strong> </p>
 					</div>
 				</section>
 
 			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
+			<footer id="footer">
+				<ul class="copyright">
+					<li>&copy; NUWiNS Lab.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</footer>
 
 		</div>
 
