--- a/uk.html
+++ b/uk.html
@@ -136,7 +136,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="index.html">Contact Us</a></li>
+							<li><a href="contact.html">Contact Us</a></li>
 							<li>
 								<a href="#" class="icon solid fa-angle-down">Specific Country Stats</a>
 								<ul>
