change contact page

--- a/contact.html
+++ b/contact.html
@@ -13,52 +13,47 @@
   clear: both;
   display: table;
 }
+h2 .white-text {
+    color: white;
+}
 </style>
 <html>
 
 	<head>
-		<title>Evolution of 5G</title>
+		<title>Contact Us</title>
 		<link rel="icon" type="image/png" href="images/nu.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="is-preload">
+	<body class="landing is-preload">
 		<div id="page-wrapper">
-
 			<!-- Header -->
-				<!-- <header id="header">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header> -->
+			<header id="header" class="alt">
+				<!-- <h1><a href="index.html">Alpha</a> by HTML5 UP</h1> -->
+				<nav id="nav">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="contact.html">Contact Us</a></li>
+						<li>
+							<a href="#" class="icon solid fa-angle-down">Specific Country Stats</a>
+							<ul>
+								<li><a href="usa.html">United States of America</a></li>
+								<li><a href="uk.html">United Kingdom</a></li>
+							</ul>
+						</li>
+					</ul>
+				</nav>
+			</header>
 
+		<!-- Banner -->
+			<section id="banner">
+			</section>
 			<!-- Main -->
 				<section id="main" class="container medium">
-					<header>
-						<h2>Contact Us</h2>
-					</header>
+					<!-- <header>
+						<h2 class="white-text" color="">Contact Us</h2>
+					</header> -->
 					<div class="box">
 						<div class="row_images">
 							<div class="column_images">
@@ -68,15 +63,25 @@
 							  <img src="images/purdue_logo.png" alt="Purdue" style="width:80%">
 							</div>
 						</div>
-						<h3><u>Purdue University</u></h3>
-						<p><strong>Y. Charlie Hu: ychu@purdue.edu</strong></p>
-							<!-- <br /> -->
-						<h3><u>Northeastern University</u></h3>
-						<p><strong>Dimitrios Koutsonikolas: d.koutsonikolas@northeastern.edu</strong>
-						<br />
-						<strong>Imran Khan: khan.i@northeastern.edu</strong>
-						<br />
-						<strong>Moinak Ghoshal: ghoshal.m@northeastern.edu</strong> </p>
+						<div style="width: 100%;">
+							<div style="width: 50%; float: left;">
+								<h3><u>Northeastern University</u></h3>
+								<a href="mailto:d.koutsonikolas@northeastern.edu"><strong>Dimitrios Koutsonikolas</strong></a>
+								<br />
+								<a href="mailto:ghoshal.m@northeastern.edu"><strong>Moinak Ghoshal</strong></a>
+								<br />
+								<a href="mailto:khan.i@northeastern.edu"><strong>Imran Khan</strong></a>
+							</div>
+							<div style="margin-left: 55%;">
+								<h3><u>Purdue University</u></h3>
+								<a href="mailto:ychu@purdue.edu"><strong>Y. Charlie Hu</strong></a>
+								<br />
+								<a href="mailto:kong102@purdue.edu"><strong>Zhaoning Kong</strong></a>
+								<br />
+								<a href="xu1201@purdue.edu"><strong>Qiang Xu</strong>
+							</div>
+						</div>
+
 					</div>
 				</section>
 
