--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 						<h2>Evolution of 5G networks
 						<br />
 						</h2>
-						<h4 id="heading0-1">This is a crowd sourced project jointly initiated by <a href="https://ece.northeastern.edu/fac-ece/dkoutsonikolas/nuwins/">Northeastern University WiNS Lab</a> and <a href="https://engineering.purdue.edu/~ychu/">Purdue University</a>.
+						<h4 id="heading0-1">This is a crowd sourced project jointly initiated by <a href="https://ece.northeastern.edu/fac-ece/dkoutsonikolas/nuwins/">Northeastern University WiNS Lab</a> and <a href="https://engineering.purdue.edu/~dsnl/">Distributed Systems & Networking Lab</a>.
 							<br />
 							We collect uplink cellular network measurements from users across the globe using our <a href="#">application</a>.
 							<br />
@@ -286,7 +286,7 @@
 							<h2>Evolution of 5G networks
 							<br />
 							</h2>
-							<h4 id="heading0">This is a crowd sourced project jointly initiated by <a href="https://ece.northeastern.edu/fac-ece/dkoutsonikolas/nuwins/">Northeastern University WiNS lab</a> and <a href="https://engineering.purdue.edu/~ychu/">Purdue University</a>.
+							<h4 id="heading0">This is a crowd sourced project jointly initiated by <a href="https://ece.northeastern.edu/fac-ece/dkoutsonikolas/nuwins/">Northeastern University WiNS Lab</a> and <a href="https://engineering.purdue.edu/~dsnl/">Distributed Systems & Networking Lab</a>.
 								<br />
 								We collect uplink cellular network measurements from users across the globe using our <a href="#">application</a>.
 								<br />
