--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@ h2 .white-text {
 								<h3><u>Northeastern University</u></h3>
 								<a href="mailto:d.koutsonikolas@northeastern.edu"><strong>Dimitrios Koutsonikolas</strong></a>
 								<br />
-								<a href="mailto:ghoshal.m@northeastern.edu"><strong>Moinak Ghoshal</strong></a>
+								<a href="mailto:ghoshal.m@northeastern.edu"><strong>MOinak Ghoshal</strong></a>
 								<br />
 								<a href="mailto:khan.i@northeastern.edu"><strong>Imran Khan</strong></a>
 							</div>
