--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 					</header>
 				</section>
 				<section class="box special features">
-					<h3 id="heading_worldwide_failure">Cellular network usage statistics around the globe</h3>
+					<h3 id="heading_worldwide_failure">Cellular network usage statistics globally</h3>
 					<div class="features-row">
 						<embed class = "img_class" src="images/performance_plots/worldwide/worlwide_stats.jpg" width="100%" height="100%" />
 					</div>
