--- a/index.html
+++ b/index.html
@@ -455,19 +455,15 @@
 						</div>
 					</section>
 					<!-- LTE end -->
-					<section class="box special features">
-						<!-- <h3>Network perfromance trend in the United States</h3> -->
+					<!-- performance trend section starts -->
+				<!-- 	<section class="box special features">
 						<h3 id="heading5"></h3>
 						<div class="features-row">
-							<!-- <section>
-								<embed src="images/performance_plots/country_placeholder/performance_trend.jpg" width="230%" height="250%" />
-							</section> -->
 							<div class="tab">
 								<button class="tablinks" onclick="openPerformancePlot(event, 'Static')" id="defaultOpen">Static</button>
 								<button class="tablinks" onclick="openPerformancePlot(event, 'Walking')">Walking</button>
 								<button class="tablinks" onclick="openPerformancePlot(event, 'Driving')">Driving</button>
 							</div>
-								<!-- Tab content -->
 								<div id="Static" class="tabcontent">
 									<embed class = "img_class" src="images/performance_plots/country_placeholder/performance_trend_static.jpg" width="100%" height="100%"/>
 								</div>
@@ -478,7 +474,7 @@
 									<embed class = "img_class" src="images/performance_plots/country_placeholder/performance_trend_driving.jpg" width="100%" height="100%" />
 								</div>
 						</div>
-					</section>
+					</section> -->
 
 
 					<!-- <div class="row">
