--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@
 						</div>
 					</section>
 					<section class="box special features">
+						<!-- Dummy -->
 						<!-- <h3>5G mmWave performance in diverse user mobility scenarios in the United States</h3> -->
 						<h3 id="heading_lte_mobility"></h3>
 						<div class="features-row">
